[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "twitch-bot-template-1"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
logdna = "^1.5"
python = "^3.7"
twitchio = "^1.0"
[tool.poetry.dev-dependencies]
